# caridata-code

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md
backend/: Dockerfile  pyproject.toml
backend/src/: api.py  settings.py
backend/src/database/: session.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 0001_initial_setup.py  0002_organisation.py  0003_variables_and_categories.py  0004_add_schemas.py  0005_aggregations_and_schemes.py  0006_add_aggregations.py  0007_add_statistics_table.py
backend/src/models/: __init__.py  aggregation.py  organisation.py  statistics.py  user.py  variable.py
backend/src/parsers/: aggregation.py  aggregation_schema.py  schemas.py
backend/src/providers/scaleway/: __init__.py  client.py  transactional_email.py
backend/src/routers/: aggregations.py  csrftoken.py  invitations.py  organisations.py  register.py  statistics.py  users.py  variables.py
backend/src/scripts/: load_aggregations_and_aggregation_schemas.py  load_variables_and_categories.py
backend/src/security/: schemas.py  users.py
backend/src/tests/: conftest.py
backend/src/tests/integration/: test_aggregation.py  test_static_schema_data.py
backend/src/utils/: __init__.py  load_aggregations.py  schemas_color_mapper.py  send_email.py
backend/src/utils/email_templates/: user_invitation_data_upload_template.html  user_invitation_password_email_template.html  user_reset_password_email_template.html  user_welcome_verify_email_template.html
backend/src/utils/mock_data/: create_mock_data.py
terraform/: main.tf  (+2 more)
(+152 files in other folders)
